# precrypt

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  fly.toml
.github/workflows/: build.yml  docker-publish.yml  main.yml  publish.yml
demo/: README.md  package.json
demo/components/: WalletConnectionProvider.tsx
demo/lib/: useLocalStorage.tsx  util.ts
demo/pages/: _app.tsx  home.tsx  index.tsx
demo/styles/: globals.css
landing/: README.md  package.json
landing/pages/: _app.tsx  index.tsx
openprecrypt-node/: next.config.js  package-lock.json  package.json
openprecrypt-node-rust/: .gitignore  vercel.json
openprecrypt-node-rust-old/api/: test.rs
openprecrypt-node-rust/api/: Cargo.toml
openprecrypt-node/api/: Cargo.toml  main.rs
openprecrypt-node/components/: WalletConnectionProvider.tsx
openprecrypt-node/lib/: nacl.ts  useFlag.tsx
openprecrypt-node/pages/: _app.tsx  download.tsx  index.js  index.tsx  upload.tsx
openprecrypt-node/pages/api/: precrypt.ts  precrypt.tsx
openprecrypt-node/pages/api/precrypt/: [cid].ts  [cid].tsx
openprecrypt-node/styles/: wallet-adapter.css
precrypt/: .gitignore  Cargo.toml  README.md  package.json
precrypt-js/: package-lock.json  package.json
precrypt-js/src/: index.ts
precrypt/npm/: getBinary.js  run.js  scripts.js
precrypt/src/: bindings_wasm.rs  lib.rs  main.rs  pre_threaded.rs
precrypt/tests/: integration.rs  wasm.rs
prenetcli/: .gitignore  Cargo.toml  buyer_sec.key  key.sec  pub.key  sec.key  secret_message.txt
prenetcli/src/: main.rs
server/: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
server/src/: index.rs  main.rs
server/src/precrypt_file/: mod.rs  request_file.rs  status_file.rs  store_file.rs
server/src/precrypt_key/: mod.rs  request_key.rs  store_key.rs
server/src/precrypt_keys/: mod.rs  request.rs  store.rs
server/src/util/: car.rs  command.rs  error_maps.rs  get_secrets.rs  mod.rs  path_builder.rs
umbral_rust_to_js_test/: README.md  js_capsule.json  rust_capsule.json  secret.json
umbral_rust_to_js_test/js/: capsule_test.js  package.json
umbral_rust_to_js_test/rust/: Cargo.toml
umbral_rust_to_js_test/rust/src/: main.rs
