[package]
name = "precrypt"
description="Cli wrapper for the umbral-pre proxy re-encryption library with parallel processing."
version = "0.2.0"
authors = ["Jacob Peddicord <jacob.peddicord@hey.com>"]
license = "GPL-3.0-only"
edition = "2021"
repository = "https://github.com/rebase-foundation/openprecrypt/tree/main/precrypt"
readme = "README.md"
categories = ["cryptography", "command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.13"
generic-array = "0.14.5"
umbral-pre = { version = "0.5.1", features = ["serde-support"] }
serde = "1.0.136"
serde_json = "1.0.78"
serde_bytes = "0.11.5"
indicatif = "0.16.2"