[package]
name = "precrypt"
description="Cli wrapper for the umbral-pre proxy re-encryption library with parallel processing."
version = "0.3.5"
authors = ["Jacob Peddicord <jacob.peddicord@hey.com>"]
license = "GPL-3.0-only"
edition = "2021"
repository = "https://github.com/rebase-foundation/precrypt/tree/main/precrypt"
readme = "README.md"
categories = ["cryptography", "command-line-utilities"]

[dependencies]
clap = "3.0.13"
generic-array = "0.14.5"
umbral-pre = { version = "0.5.1", features = ["serde-support", "bindings-wasm"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.78"
indicatif = "0.16.2"