[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "3.0.0", features=["openssl"] }
dotenv = "0.15.0"
generic-array = "0.14.5"
umbral-pre = { version = "0.5.1", features = ["serde-support"] }
serde = "1.0.136"
serde_json = "1.0.78"
serde_bytes = "0.11.5"
precrypt = "0.2.1"
orion = "0.17.1"
actix-cors = "0.5.4"
nacl = "0.5.3"